add sleep and purge-values to h5m for testing purposes